finalizacao de downloads e uploads de arquivos