@@ -15,7 +15,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/file/v1")
@@ -30,6 +32,9 @@ public class FileController implements FileControllerDocs {
     @Override
     public UploadFileResponseDTO uploadFile(@RequestParam("file") MultipartFile file) {
         var fileName = service.storeFile(file);
+
+        //http://localhost:8080/api/file/v1/downloadFile/filename.docx
+
         var fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
                 .path("/api/file/v1/downloadFile/")
                 .path(fileName)
@@ -37,9 +42,13 @@ public class FileController implements FileControllerDocs {
         return new UploadFileResponseDTO(fileName,fileDownloadUri,file.getContentType(),file.getSize());
     }
 
+    @PostMapping("/uploadMultipleFile")
     @Override
-    public List<UploadFileResponseDTO> uploadMultipleFile(MultipartFile[] files) {
-        return List.of();
+    public List<UploadFileResponseDTO> uploadMultipleFile(@RequestParam("files") MultipartFile[] files) {
+        return Arrays.asList(files)
+                .stream()
+                .map(file -> uploadFile(file))
+                .collect(Collectors.toList());
     }
 
     @Override
